# sc2_replay_analyzer

./: .coverage  .gitignore  BACKLOG.md  CLAUDE.md  README.md  config.py  db.py  parser.py  pyproject.toml  release.sh  requirements.txt  sc2_analyzer.py  sc2_log_exract.py  test.csv  ui.py
.claude/: settings.local.json
scripts/: generate_readme.py
src/sc2_replay_analyzer/: __init__.py  cli.py  commands.py  config.py  db.py  parser.py  ui.py
src/sc2_replay_analyzer/server/: __init__.py  api.py  routes.py
src/sc2_replay_analyzer/server/static/css/: overlay.css
src/sc2_replay_analyzer/server/static/js/: mmr_graph.js
src/sc2_replay_analyzer/server/static/templates/: mmr_graph.html
tests/: __init__.py  conftest.py  test_config.py  test_db.py  test_server.py
